@@ -8,7 +8,9 @@ import static org.folio.rest.utils.TenantApiTestUtil.deleteTenant;
 import static org.folio.rest.utils.TenantApiTestUtil.prepareTenant;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.verifyNoInteractions;
 
@@ -34,7 +36,7 @@ import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
 
 import io.restassured.http.Header;
-import io.vertx.core.Promise;
+import io.vertx.core.Future;
 import io.vertx.core.Vertx;
 import io.vertx.junit5.VertxExtension;
 import io.vertx.junit5.VertxTestContext;
@@ -62,12 +64,12 @@ public class PieceServiceTest extends TestBase {
 
   @AfterEach
   void cleanupData() {
-
     deleteTenant(tenantJob, TEST_TENANT_HEADER);
   }
 
   @Test
   void shouldReturnPiecesByPoLineId(Vertx vertx, VertxTestContext testContext) {
+    final DBClient client = new DBClient(vertx, TEST_TENANT);
     String poLineId = UUID.randomUUID().toString();
     String pieceId = UUID.randomUUID().toString();
 
@@ -76,40 +78,20 @@ public class PieceServiceTest extends TestBase {
       .withId(pieceId)
       .withPoLineId(poLineId);
 
-    Promise<Void> promise1 = Promise.promise();
-    Promise<Void> promise2 = Promise.promise();
-    final DBClient client = new DBClient(vertx, TEST_TENANT);
+    var future = createPoLineAndPiece(poLine, piece, client)
+      .compose(o -> pieceService.getPiecesByPoLineId(poLineId, client));
 
-    client.getPgClient().save(PO_LINE_TABLE, poLineId, poLine, event -> {
-      promise1.complete();
-      log.info("PoLine was saved");
-    });
-
-
-    promise1.future().onComplete(v -> {
-      client.getPgClient().save(PIECES_TABLE, pieceId, piece, ar -> {
-        if (ar.failed()) {
-          promise2.fail(ar.cause());
-        } else {
-          promise2.complete();
-          log.info("Piece was saved");
-        }
-      });
-    });
-
-    testContext.assertComplete(promise2.future()
-        .compose(o -> pieceService.getPiecesByPoLineId(poLineId, client)))
+    testContext.assertComplete(future)
       .onComplete(ar -> {
         List<Piece> actPieces = ar.result();
-        testContext.verify(() -> {
-          assertThat(actPieces.get(0).getId(), is(pieceId));
-        });
+        testContext.verify(() -> assertThat(actPieces.getFirst().getId(), is(pieceId)));
         testContext.completeNow();
       });
   }
 
   @Test
   void shouldFailedGetPiecesByPoLineId(Vertx vertx, VertxTestContext testContext) {
+    final DBClient client = new DBClient(vertx, TEST_TENANT);
     String poLineId = UUID.randomUUID().toString();
     String pieceId = UUID.randomUUID().toString();
     String incorrectPoLineId = UUID.randomUUID().toString();
@@ -121,37 +103,17 @@ public class PieceServiceTest extends TestBase {
       .withPoLineId(poLineId)
       .withHoldingId(holdingId);
 
-    Promise<Void> promise1 = Promise.promise();
-    Promise<Void> promise2 = Promise.promise();
-    final DBClient client = new DBClient(vertx, TEST_TENANT);
+    var future = createPoLineAndPiece(poLine, piece, client)
+      .compose(o -> pieceService.getPiecesByPoLineId(incorrectPoLineId, client));
 
-    client.getPgClient().save(PO_LINE_TABLE, poLineId, poLine, event -> {
-      promise1.complete();
-      log.info("PoLine was saved");
-    });
-
-
-    promise1.future().onComplete(v -> {
-      client.getPgClient().save(PIECES_TABLE, pieceId, piece, ar -> {
-        if (ar.failed()) {
-          promise2.fail(ar.cause());
-        } else {
-          promise2.complete();
-          log.info("Piece was saved");
-        }
-      });
-    });
-
-    testContext.assertComplete(promise2.future()
-      .compose(o -> pieceService.getPiecesByPoLineId(incorrectPoLineId, client))
+    testContext.assertComplete(future)
       .onComplete(ar -> {
         List<Piece> actPieces = ar.result();
-        testContext.verify(() -> {
-          assertNull(actPieces);
-        });
+        testContext.verify(() -> assertNull(actPieces));
         testContext.completeNow();
-      }));
+      });
   }
+
 
   @Test
   void shouldReturnPiecesByItemId(Vertx vertx, VertxTestContext testContext) {
@@ -169,7 +131,7 @@ public class PieceServiceTest extends TestBase {
 
         return testContext.assertComplete(getPiecesFuture).onComplete(ar -> {
           List<Piece> actPieces = ar.result();
-          testContext.verify(() -> assertThat(actPieces.get(0).getId(), is(pieceId)));
+          testContext.verify(() -> assertThat(actPieces.getFirst().getId(), is(pieceId)));
           testContext.completeNow();
         });
       });
@@ -200,12 +162,40 @@ public class PieceServiceTest extends TestBase {
   }
 
   @Test
+  void shouldReturnPiecesByItemIdExist(Vertx vertx, VertxTestContext testContext) {
+    var itemId = UUID.randomUUID().toString();
+    var pieceId = UUID.randomUUID().toString();
+    var piece = new Piece().withId(pieceId).withItemId(itemId);
+
+    new DBClient(vertx, TEST_TENANT).getPgClient().withConn(conn -> {
+      var future = conn.save(PIECES_TABLE, pieceId, piece)
+        .compose(saved -> pieceService.getPiecesByItemIdExist(itemId, TEST_TENANT, conn));
+      return testContext.assertComplete(future).onComplete(ar -> {
+        testContext.verify(() -> assertTrue(ar.result()));
+        testContext.completeNow();
+      });
+    });
+  }
+
+  @Test
+  void shouldReturnPiecesByItemIdNotExist(Vertx vertx, VertxTestContext testContext) {
+    var itemId = UUID.randomUUID().toString();
+
+    new DBClient(vertx, TEST_TENANT).getPgClient().withConn(conn -> {
+      var future = pieceService.getPiecesByItemIdExist(itemId, TEST_TENANT, conn);
+      return testContext.assertComplete(future).onComplete(ar -> {
+        testContext.verify(() -> assertFalse(ar.result()));
+        testContext.completeNow();
+      });
+    });
+  }
+
+  @Test
   void shouldUpdatePiecesByPoLineAndInstanceRef(Vertx vertx, VertxTestContext testContext) {
     String poLineId = UUID.randomUUID().toString();
     String pieceId = UUID.randomUUID().toString();
     String holdingId = UUID.randomUUID().toString();
-    Promise<Void> promise1 = Promise.promise();
-    Promise<Void> promise2 = Promise.promise();
+
     final DBClient client = new DBClient(vertx, TEST_TENANT);
     PoLine poLine = new PoLine().withId(poLineId);
     Piece piece = new Piece()
@@ -221,37 +211,20 @@ public class PieceServiceTest extends TestBase {
 
     Tx<PoLine> tx = new Tx<>(poLine, client.getPgClient());
 
-    client.getPgClient().save(PO_LINE_TABLE, poLineId, poLine, event -> {
-      promise1.complete();
-      log.info("PoLine was saved");
-    });
+    var poLinePieceFuture = createPoLineAndPiece(poLine, piece, client);
 
-    promise1.future().onComplete(v -> {
-      client.getPgClient().save(PIECES_TABLE, pieceId, piece, ar -> {
-        if (ar.failed()) {
-          promise2.fail(ar.cause());
-        } else {
-          promise2.complete();
-          log.info("Piece was saved");
-        }
-      });
-    });
-
-    testContext.assertComplete(
-      tx.startTx()
-        .compose(poLineTx ->
-          promise2.future()
-            .compose(o -> pieceService.updatePieces(poLineTx, replaceInstanceRef, client)))
-        .compose(Tx::endTx)
-        .onComplete(v -> pieceService.getPiecesByPoLineId(poLineId, client)
-          .onComplete(ar -> {
-            List<Piece> actPieces = ar.result();
-            testContext.verify(() -> {
-              assertThat(actPieces.get(0).getId(), is(pieceId));
-              assertThat(actPieces.get(0).getHoldingId(), is(newHoldingId));
-            });
-            testContext.completeNow();
-          })));
+    testContext.assertComplete(tx.startTx()
+      .compose(poLineTx -> poLinePieceFuture.compose(o -> pieceService.updatePieces(poLineTx, replaceInstanceRef, client)))
+      .compose(Tx::endTx)
+      .onComplete(v -> pieceService.getPiecesByPoLineId(poLineId, client)
+        .onComplete(ar -> {
+          List<Piece> actPieces = ar.result();
+          testContext.verify(() -> {
+            assertThat(actPieces.getFirst().getId(), is(pieceId));
+            assertThat(actPieces.getFirst().getHoldingId(), is(newHoldingId));
+          });
+          testContext.completeNow();
+        })));
   }
 
   @Test
@@ -283,10 +256,10 @@ public class PieceServiceTest extends TestBase {
           .onComplete(ar -> {
             List<Piece> actPieces = ar.result();
             testContext.verify(() -> {
-              assertThat(actPieces.get(0).getId(), is(pieceId));
-              assertThat(actPieces.get(0).getItemId(), is(itemId));
-              assertThat(actPieces.get(0).getHoldingId(), is(newHoldingId));
-              assertThat(actPieces.get(0).getReceivingTenantId(), is(TEST_TENANT));
+              assertThat(actPieces.getFirst().getId(), is(pieceId));
+              assertThat(actPieces.getFirst().getItemId(), is(itemId));
+              assertThat(actPieces.getFirst().getHoldingId(), is(newHoldingId));
+              assertThat(actPieces.getFirst().getReceivingTenantId(), is(TEST_TENANT));
             });
             testContext.completeNow();
           }));
@@ -331,4 +304,15 @@ public class PieceServiceTest extends TestBase {
         });
     });
   }
+
+  private Future<Void> createPoLineAndPiece(PoLine poLine, Piece piece, DBClient client) {
+    var pgClient = client.getPgClient();
+    return client.getPgClient()
+      .save(PO_LINE_TABLE, poLine.getId(), poLine)
+      .onSuccess(s -> log.info("PoLine was saved"))
+      .compose(v -> pgClient.save(PIECES_TABLE, piece.getId(), piece))
+      .onSuccess(s -> log.info("Piece was saved"))
+      .mapEmpty();
+  }
+
 }
